--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practica 1 Grid</title>
-    <link rel="stylesheet" href="estilo1.css" />
+    <link rel="stylesheet" href="css/estilo3/estilo3.css" />
   </head>
   <body>
     <header>
       <h1>Nombre del sitio</h1>
     </header>
     <main>
-        <p>asfdsadfasdf asdfasdfasdf asdfasdf sadf asdf asdf asdf asdf asdfasfd asdasdfasdf dsadfsadf asdf asdf asd fasd fsa dfsaf</p>
-    <!--
-      <section class="articulos">
+
         <article class="articulo">
           <h2>Titulo</h2>
           <img src="img/imagen.jpg" alt="foto" />
@@ -62,10 +60,13 @@
             fugit harum in obcaecati nesciunt a error
           </p>
         </article>
-      </section>
-      -->
+  
     </main>
-    <aside></aside>
-    <footer></footer>
+    <aside>
+      <p>a</p>
+    </aside>
+    <footer>
+      <p>a</p>
+    </footer>
   </body>
 </html>
